# conext

./: .ghci  .gitignore  LICENSE  README.md  conext.cabal
app/: Main.hs
src/: Conext.hs  Main.hs
test/: Spec.hs  pieceOf_consoleFull
