name:                conext
version:             0.1.0.0
synopsis: Tool to extract data from jenkins consoleText
homepage:            https://github.com/jhrcek/conext
license:             BSD3
license-file:        LICENSE
author:              Jan Hrček
copyright:           2017 Jan Hrček
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable conext
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base,
                       tagsoup,
                       text,
                       time,
                       directory
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jhrcek/conext
